<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77EA80FC"
    android:orientation="vertical"
    tools:context="com.view.SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/your_love_match"
        android:textColor="#5C31A8"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_boy"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profile" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/heart_ic" />

        <ImageView
            android:id="@+id/img_girl"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/girl_icon"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/gvanhi"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name_gl"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="146dp"
            android:text="@string/heason"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="44dp"
        android:gravity="center"
        android:text="@string/_100"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/without_a_doubt"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>