<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77EA80FC"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.view.MainActivity">

    <TextView
        android:id="@+id/tv_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/love_calculator"
        android:textColor="#633DCA"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_boy"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/enter_boy_name"
        android:padding="14dp"
        android:textColorHint="#9A2A50"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/img_girl"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/girl_icon"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/et_name_gl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/enter_girl_name"
        android:padding="14dp"
        android:textColorHint="#9A2A50"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:backgroundTint="#B388FF"
        android:text="@string/calculate"
        android:textColor="#BC000000"
        android:textSize="22sp" />


</LinearLayout>